# Remote-Shell

./: .gitignore  CMakeLists.txt  Dockerfile  Minimal run.sh  README.md  git.sh  run.sh
include/: CommandExecutor.hpp  colors.hpp  cors.h  main.hpp
src/: commandExecutor.cpp  handle_signals.cpp  handle_signals.hpp  main.cpp
src/client/: client.cpp  client.hpp  client_REST.cpp  client_REST.hpp
src/server/: server.cpp  server.hpp
tests/catch2/: CMakeLists.txt  test_main.cpp
tests/gtests/: CMakeLists.txt  gtest_main.cpp
